ajout de commentaires en français

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <!--Partie filtre-->
             <p id="lien-filtre">Filtres</p>
             <div class="filtre">
-
                 <div class="liens-container">
                     <div class="groupe-lien">
                         <div class="lien">
@@ -74,7 +73,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <div id="info">
                 <i class="fa-solid fa-info fa-blue"></i>
@@ -86,8 +84,7 @@
             <section class="hebergement-vert">
                 <section class="hebergement-bleu">
                     <p class="titre">Hébergements à Marseille</p>
-                    <section class="hebergement-rouge">
-
+                    <section class="hebergement-rouge"
                         <article class="hebergement-jaune">
                             <div class="card-hebergement">
                                 <a href="#">
@@ -138,7 +135,6 @@
                                 </div>
                             </div>
                         </article>
-
                         <article class="hebergement-jaune">
                             <div class="card-hebergement">
                                 <a href="#">
@@ -189,7 +185,6 @@
                                 </div>
                             </div>
                         </article>
-
                     </section>
                     <h5 id="next"><a href="#">Afficher plus</a></h5>
                 </section>
