correction du responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title> booki</title>
 </head>
 <body>
-    <div id="container">
+   
         <header id="header">
             <!--navigation-->
             <nav>
@@ -46,8 +46,9 @@
                 </form>
             </div>
             <!--Partie filtre-->
-            <p id="lien-filtre">Filtres</p>
+           
             <div class="filtre">
+                <p id="lien-filtre">Filtres</p>
                 <div class="liens-container">
                     <div class="groupe-lien">
                         <div class="lien">
@@ -73,6 +74,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
             <div id="info">
                 <i class="fa-solid fa-info fa-blue"></i>
@@ -84,7 +86,8 @@
             <section class="hebergement-vert">
                 <section class="hebergement-bleu">
                     <p class="titre">Hébergements à Marseille</p>
-                    <section class="hebergement-rouge"
+                    <section class="hebergement-rouge">
+
                         <article class="hebergement-jaune">
                             <div class="card-hebergement">
                                 <a href="#">
@@ -135,6 +138,7 @@
                                 </div>
                             </div>
                         </article>
+
                         <article class="hebergement-jaune">
                             <div class="card-hebergement">
                                 <a href="#">
@@ -185,6 +189,7 @@
                                 </div>
                             </div>
                         </article>
+
                     </section>
                     <h5 id="next"><a href="#">Afficher plus</a></h5>
                 </section>
@@ -291,6 +296,6 @@
                 <a href="#">Nous contacter</a>
             </div>
         </footer>
-    </div>
+    
 </body>
 </html>
