mise au point responsive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             </div>
             <div id="info">
-                <i class="fa-solid fa-info fa-blue"></i>
+                <i class="fa-solid fa-info fa-blue" style="margin-top:25px"></i>
                 <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
             </div>
         </header>
