ajout de l'icone loupe pour la partie mobile

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                     <fieldset id="loca-icone">
                         <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
                     </fieldset>
-                    <input type="text" id="fname" name="fname" value="   Marseille,France">
+                    <input type="text" id="fname" name="fname" value="Marseille,France">
                     <label for="recherche"></label>
-                    <input id="recherche" type="submit" value="Rechercher">
+                    <input id="recherche" type="submit" value="rechercher" />
+                    <button id="recherche-loupe" type="submit" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+
                 </form>
             </div>
             <!--Partie filtre-->
