correction error dans index.html et style.css suite au passage du validator

--- a/index.html
+++ b/index.html
@@ -90,53 +90,59 @@
                     <section class="hebergement-rouge">
 
                         <article class="hebergement-jaune">
+                           
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Auberge La Canebière</p>
-                                    <p>Nuit à partir de 25 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Auberge La Canebière</p>
+                                        <p>Nuit à partir de 25 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
+                           
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Hôtel du port</p>
-                                    <p>Nuit à partir de 52 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Hôtel du port</p>
+                                        <p>Nuit à partir de 52 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Hôtel les mouettes</p>
-                                    <p>Nuit à partir de 76 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Hôtel les mouettes</p>
+                                        <p>Nuit à partir de 76 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
+
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </article>
 
@@ -144,50 +150,53 @@
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Hôtel de la mer</p>
-                                    <p>Nuit à partir de 46 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Hôtel de la mer</p>
+                                        <p>Nuit à partir de 46 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Auberge le panier</p>
-                                    <p>Nuit à partir de 23 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Auberge le panier</p>
+                                        <p>Nuit à partir de 23 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="card-hebergement">
                                 <a href="#">
                                     <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
-                                </a>
-                                <div class="card-container">
-                                    <p class="nom">Hôtel chez Amina</p>
-                                    <p>Nuit à partir de 96 €</p>
-                                    <div id="star-logement">
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star fa-grey"></i>
+
+                                    <div class="card-container">
+                                        <p class="nom">Hôtel chez Amina</p>
+                                        <p>Nuit à partir de 96 €</p>
+                                        <div class="star-logement">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                         </article>
 
@@ -199,46 +208,52 @@
                     <p class="titre">Les plus populaires</p>
                     <article class="populaire-jaune">
                         <div class="card-populaire">
-                            <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
-                            <div class="card-container">
-                                <p class="nom">Hôtel le soleil du matin</p>
-                                <p>Nuit à partir de 128 €</p>
-                                <div id="star-populaire">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star fa-grey"></i>
-                                </div>
-                            </div>
+                                <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
+                                <a href="#">
+                                    <div class="card-container">
+                                        <p class="nom">Hôtel le soleil du matin</p>
+                                        <p>Nuit à partir de 128 €</p>
+                                        <div class="star-populaire">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star fa-grey"></i>
+                                        </div>
+                                    </div>
+                                </a>
                         </div>
                         <div class="card-populaire">
                             <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
-                            <div class="card-container">
-                                <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
-                                <p>Nuit à partir de 71 €</p>
-                                <div id="star-populaire">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-regular fa-star fa-grey"></i>
+                            <a href="#">
+                                <div class="card-container">
+                                    <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
+                                    <p>Nuit à partir de 71 €</p>
+                                    <div class="star-populaire">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star fa-grey"></i>
+                                    </div>
                                 </div>
-                            </div>
+                                </a>
                         </div>
                         <div class="card-populaire">
                             <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
-                            <div class="card-container">
-                                <p class="nom">Hôtel Bleu et Blanc</p>
-                                <p>Nuit à partir de 68 €</p>
-                                <div id="star-populaire">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star fa-grey"></i>
+                            <a href="#">
+                                <div class="card-container">
+                                    <p class="nom">Hôtel Bleu et Blanc</p>
+                                    <p>Nuit à partir de 68 €</p>
+                                    <div class="star-populaire">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
+                                    </div>
                                 </div>
-                            </div>
+                                </a>
                         </div>
                     </article>
                 </section>
