rajouté icone chart line

--- a/index.html
+++ b/index.html
@@ -206,7 +206,11 @@
                 </section>
 
                 <section class="populaire-rouge">
-                    <p class="titre">Les plus populaires</p>
+                    <div class="icone-populaire">
+                        <p class="titre">Les plus populaires</p>
+                        <i class="fa-solid fa-chart-line fa-blue"></i>
+                    </div>
+                    </div>
                     <article class="populaire-jaune">
                         <div class="card-populaire">
                             <a href="#">
