travail sur la mise en page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <!-- Partie recherche-->
             <div class="rechercher">
-                <form action="#">
+                <form class="form" action="#">
                     <fieldset id="loca-icone">
                         <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
                     </fieldset>
