travail sur la mise en page du desktop,tablette,mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         </div>
         <div id="info">
-            <i class="fa-solid fa-info fa-blue" style="margin-top:25px"></i>
+            <i class="fa-solid fa-info fa-blue"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
         </div>
     </header>
@@ -96,56 +96,56 @@
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière">
-                            </a>
-
-                            <div class="card-container">
-                                <p class="nom">Auberge La Canebière</p>
-                                <p>Nuit à partir de 25 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                           
+                                <div class="card-container">
+                                    <p class="nom">Auberge La Canebière</p>
+                                    <p>Nuit à partir de 25 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
 
                         </div>
 
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-                            </a>
-                            <div class="card-container">
-                                <p class="nom">Hôtel du port</p>
-                                <p>Nuit à partir de 52 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
-                                </div>
-                            </div>
 
+                                <div class="card-container">
+                                    <p class="nom">Hôtel du port</p>
+                                    <p>Nuit à partir de 52 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
-                            </a>
-                            <div class="card-container">
-                                <p class="nom">Hôtel les mouettes</p>
-                                <p>Nuit à partir de 76 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
+
+                                <div class="card-container">
+                                    <p class="nom">Hôtel les mouettes</p>
+                                    <p>Nuit à partir de 76 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
+
                                 </div>
-
-                            </div>
-
+                            </a>
                         </div>
                     </article>
 
@@ -153,53 +153,53 @@
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
-                            </a>
-                            <div class="card-container">
-                                <p class="nom">Hôtel de la mer</p>
-                                <p>Nuit à partir de 46 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
-                                </div>
-                            </div>
 
+                                <div class="card-container">
+                                    <p class="nom">Hôtel de la mer</p>
+                                    <p>Nuit à partir de 46 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
-                            </a>
-                            <div class="card-container">
-                                <p class="nom">Auberge le panier</p>
-                                <p>Nuit à partir de 23 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
-                                </div>
-                            </div>
 
+                                <div class="card-container">
+                                    <p class="nom">Auberge le panier</p>
+                                    <p>Nuit à partir de 23 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-hebergement">
                             <a href="#">
                                 <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
-                            </a>
-                            <div class="card-container">
-                                <p class="nom">Hôtel chez Amina</p>
-                                <p>Nuit à partir de 96 €</p>
-                                <div class="star-logement">
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
-                                </div>
-                            </div>
 
+                                <div class="card-container">
+                                    <p class="nom">Hôtel chez Amina</p>
+                                    <p>Nuit à partir de 96 €</p>
+                                    <div class="star-logement">
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-sm"></i>
+                                        <i class="fa-solid fa-star fa-grey fa-sm"></i>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </article>
 
@@ -254,7 +254,7 @@
                         </a>
                         <div class="card-container">
                             <p class="nom">Hôtel Bleu et Blanc</p>
-                            <p>Nuit à partir de 68 €</p>
+                            <p id="bleu">Nuit à partir de 68 €</p>
                             <div class="star-populaire">
                                 <i class="fa-solid fa-star fa-sm"></i>
                                 <i class="fa-solid fa-star fa-sm"></i>
