--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         </div>
         <div id="info">
-            <i class="fa-solid fa-info fa-blue"></i>
+            <i class="fa-solid fa-circle-info fa-blue"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
         </div>
     </header>
