--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@
         <!-- Partie recherche-->
         <div class="rechercher">
             <form class="form" action="#">
-                <fieldset id="loca-icone">
-                    <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
-                </fieldset>
-                <input type="text" id="fname" name="fname" value="Marseille,France">
+                <i class="fa-solid fa-location-dot fa-lg"></i>   
+                <input type="text" id="fname" name="fname" value="Marseille, France">
                 <label for="recherche"></label>
-                <input id="recherche" type="submit" value="rechercher" />
+                <input id="recherche" type="submit" value="Rechercher" />
                 <button id="recherche-loupe" type="submit" class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-
             </form>
         </div>
         <!--Partie filtre-->
@@ -55,11 +52,11 @@
             <div class="liens-container">
                 <div class="groupe-lien">
                     <div class="lien">
-                        <i class="fa-solid fa-sack-dollar"></i>
+                        <i class="fa-solid fa-sack-dollar fa-lg"></i>
                         <a href="#">Economique</a>
                     </div>
                     <div class="lien">
-                        <i class="fa-solid fa-person"></i>
+                        <i class="fa-solid fa-person fa-xl"></i>
                         <a href="#">Familial</a>
                     </div>
                 </div>
@@ -68,11 +65,11 @@
             <div class="liens-container">
                 <div class="groupe-lien">
                     <div class="lien">
-                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-heart fa-lg"></i>
                         <a href="#">Romantique</a>
                     </div>
                     <div class="lien lien-dog ">
-                        <i class="fa-sharp fa-solid fa-dog"></i>
+                        <i class="fa-sharp fa-solid fa-dog fa-lg"></i>
                         <a href="#">Animaux autorisés</a>
                     </div>
                 </div>
@@ -80,7 +77,7 @@
 
         </div>
         <div id="info">
-            <i class="fa-solid fa-circle-info fa-blue"></i>
+            <i class="fa-solid fa-info fa-blue fa-xs"></i>
             <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
         </div>
     </header>
@@ -242,7 +239,7 @@
                             <div class="card-container">
                                 <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
                                 <p>Nuit à partir de 71 €</p>
-                                <div class="star-populaire">
+                                <div class="star-populaire-eau">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
