Travail sur la partie responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#">Economique</a>
                     </div>
                     <div class="lien">
-                        <i class="fa-solid fa-person fa-xl"></i>
+                        <i class="fa-solid fa-person fa-lg"></i>
                         <a href="#">Familial</a>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="card-populaire">
+                        <div class="card-populaire card-populaire-eau">
 
                             <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
 
@@ -251,14 +251,14 @@
                         </div>
                     </a>
                     <a href="#">
-                        <div class="card-populaire">
+                        <div class="card-populaire card-populaire-bleu">
 
                             <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
 
                             <div class="card-container">
                                 <p class="nom">Hôtel Bleu et Blanc</p>
                                 <p id="bleu">Nuit à partir de 68 €</p>
-                                <div class="star-populaire">
+                                <div class="star-populaire star-populaire-blanc">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
