--- a/index.html
+++ b/index.html
@@ -50,29 +50,29 @@
         <div class="filtre">
             <p id="lien-filtre">Filtres</p>
             <div class="liens-container">
-                <div class="groupe-lien">
-                    <div class="lien">
-                        <i class="fa-solid fa-sack-dollar fa-lg"></i>
-                        <a href="#">Economique</a>
-                    </div>
-                    <div class="lien">
-                        <i class="fa-solid fa-person fa-lg"></i>
-                        <a href="#">Familial</a>
-                    </div>
+                <!--<div class="groupe-lien">-->
+                <div class="lien1">
+                    <i class="fa-solid fa-sack-dollar fa-lg"></i>
+                    <a href="#">Économique</a>
                 </div>
+                <div class="lien2">
+                    <i class="fa-solid fa-person fa-lg"></i>
+                    <a href="#">Familial</a>
+                </div>
+                <!--  </div> -->
             </div>
 
             <div class="liens-container">
-                <div class="groupe-lien">
-                    <div class="lien">
+                <!--<div class="groupe-lien">-->
+                    <div class="lien3">
                         <i class="fa-solid fa-heart fa-lg"></i>
                         <a href="#">Romantique</a>
                     </div>
-                    <div class="lien lien-dog ">
+                    <div class=" lien4">
                         <i class="fa-sharp fa-solid fa-dog fa-lg"></i>
                         <a href="#">Animaux autorisés</a>
                     </div>
-                </div>
+                <!--</div>-->
             </div>
 
         </div>
@@ -96,7 +96,7 @@
                            
                                 <div class="card-container">
                                     <p class="nom">Auberge La Canebière</p>
-                                    <p>Nuit à partir de 25 €</p>
+                                    <p class="prix">Nuit à partir de 25 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -115,7 +115,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel du port</p>
-                                    <p>Nuit à partir de 52 €</p>
+                                    <p class="prix">Nuit à partir de 52 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -132,7 +132,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel les mouettes</p>
-                                    <p>Nuit à partir de 76 €</p>
+                                    <p class="prix">Nuit à partir de 76 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -153,7 +153,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel de la mer</p>
-                                    <p>Nuit à partir de 46 €</p>
+                                    <p class="prix">Nuit à partir de 46 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -170,7 +170,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Auberge le panier</p>
-                                    <p>Nuit à partir de 23 €</p>
+                                    <p class="prix">Nuit à partir de 23 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -187,7 +187,7 @@
 
                                 <div class="card-container">
                                     <p class="nom">Hôtel chez Amina</p>
-                                    <p>Nuit à partir de 96 €</p>
+                                    <p class="prix">Nuit à partir de 96 €</p>
                                     <div class="star-logement">
                                         <i class="fa-solid fa-star fa-sm"></i>
                                         <i class="fa-solid fa-star fa-sm"></i>
@@ -219,13 +219,13 @@
 
                             <div class="card-container">
                                 <p class="nom">Hôtel le soleil du matin</p>
-                                <p>Nuit à partir de 128 €</p>
+                                <p class="prix">Nuit à partir de 128 €</p>
                                 <div class="star-populaire">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-regular fa-star fa-grey fa-sm"></i>
+                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
                                 </div>
                             </div>
 
@@ -238,13 +238,13 @@
 
                             <div class="card-container">
                                 <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
-                                <p>Nuit à partir de 71 €</p>
-                                <div class="star-populaire-eau">
+                                <p class="prix">Nuit à partir de 71 €</p>
+                                <div class="star-populaire">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-regular fa-star fa-grey fa-sm"></i>
+                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
                                 </div>
                             </div>
 
@@ -257,13 +257,13 @@
 
                             <div class="card-container">
                                 <p class="nom">Hôtel Bleu et Blanc</p>
-                                <p id="bleu">Nuit à partir de 68 €</p>
-                                <div class="star-populaire star-populaire-blanc">
+                                <p class="prix">Nuit à partir de 68 €</p>
+                                <div class="star-populaire-blanc">
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
                                     <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
+                                    <i class="fa-solid fa-star fa-grey fa-sm"></i>
                                 </div>
                             </div>
 
